--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
+db.sqlite3
 
 # Flask stuff:
 instance/
@@ -99,3 +100,11 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# VSCode
+.vscode/
